# trading-signal-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_bot_live.bat
.github/workflows/: ci.yml
config/: settings.m1_only.yaml  settings.yaml
docs/: ARCHITECTURE.md  AWS_VPS_SETUP.md  AWS_WEEKDAY_SCHEDULE_SETUP.md  BOT_FAILURE_SCENARIOS.md  DFD.md  ERD.md  GLOSSARY.md  MILESTONES.md  PRD.md  Planning.md  SETUP_TASKS.md  TECHNICAL_SPEC.md  TEST_PLAN.md
scripts/: deploy.ps1  install.ps1  install_service.ps1  journal_report.py  mt5_preflight.py  preflight_prod.ps1  run.ps1  update_outcome.py
src/backtester/: __main__.py  data_loader.py  engine.py  report.py  trade_recorder.py
src/trading_signal_bot/: __init__.py  health_alerter.py  main.py  models.py  mt5_client.py  ports.py  settings.py  strategy.py  telegram_notifier.py  utils.py
src/trading_signal_bot/indicators/: __init__.py  lwma.py  stochastic.py  volatility.py
src/trading_signal_bot/repositories/: dedup_store.py  signal_journal.py
tests/: conftest.py
tests/integration/: test_mt5_client_resilience.py  test_notifier_retry.py
tests/replay/: test_replay.py
tests/unit/: test_backtester_data_loader.py  test_dedup_store.py  test_lwma.py  test_m1_only.py  test_stochastic.py  test_strategy.py  test_utils_lock.py
